--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,9 @@
         </select>
         <button id="quick_connect_button">Connect</button>
     </div>
+    <template name="myterminal">
+        <div id="terminal-container"></div>
+    </template>
     <script src="../js/index.js"></script>
 </body>
 </html>
